# DeathCore_2017

./: .circle.yml  .gitignore  .travis.yml  CMakeLists.txt  COPYING  PreLoad.cmake  README.md  issue_template.md  pull_request_template.md  revision.h.in.cmake  revision_data.h.in.cmake
dep/: CMakeLists.txt  PackageList.txt
dep/SFMT/: CMakeLists.txt
dep/StormLib/: CMakeLists.txt
dep/acelite/: CMakeLists.txt  ace-v6.1.4_hotfix1.diff
dep/acelite/ace/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/cppformat/: CMakeLists.txt
dep/efsw/: CMakeLists.txt
dep/fmt/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/mysql/: CMakeLists.txt
dep/mysqllite/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
dep/process/: CMakeLists.txt
dep/readline/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/threads/: CMakeLists.txt
dep/utf8cpp/: CMakeLists.txt
dep/valgrind/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
src/common/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h
src/common/Collision/Management/: IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/common/Collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/common/Collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/common/Configuration/: BuiltInConfig.cpp  BuiltInConfig.h  Config.cpp  Config.h
src/common/Cryptography/: ARC4.cpp  ARC4.h  BigNumber.cpp  BigNumber.h  HMACSHA1.cpp  HMACSHA1.h  OpenSSLCrypto.cpp  OpenSSLCrypto.h  SHA1.cpp  SHA1.h  WardenKeyGeneration.h
src/common/Cryptography/Authentication/: AuthCrypt.cpp  AuthCrypt.h
src/common/Debugging/: Errors.cpp  Errors.h  WheatyExceptionReport.cpp
src/common/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogOperation.cpp  LogOperation.h  LogWorker.h  Logger.cpp  Logger.h
src/common/Metric/: Metric.cpp  Metric.h
src/common/Platform/: ServiceWin32.cpp  ServiceWin32.h
src/common/PrecompiledHeaders/: commonPCH.cpp  commonPCH.h
src/common/Threading/: DelayExecutor.h  LockedMap.h  LockedQueue.h  MPSCQueue.h  ProcessPriority.h  ProducerConsumerQueue.h  Threading.cpp  Threading.h
src/common/Utilities/: ByteConverter.h  Containers.h  Duration.h  EventMap.cpp  EventMap.h  EventProcessor.cpp  EventProcessor.h  MessageBuffer.h  Random.cpp  Random.h  StartProcess.cpp  StartProcess.h  StringFormat.h  TaskScheduler.cpp  TaskScheduler.h  Timer.h  Util.cpp  Util.h
src/server/: CMakeLists.txt
src/server/Database/Database/: DatabaseEnv.h  QueryHolder.h  QueryResult.h  SQLOperation.h
src/server/Database/Logging/: AppenderDB.cpp
src/server/Database/PrecompiledHeaders/: databasePCH.h
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc  resource.h
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h  TOTP.cpp  TOTP.h
src/server/authserver/PrecompiledHeaders/: authPCH.cpp  authPCH.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSession.cpp  AuthSession.h  AuthSocket.cpp  AuthSocket.h  AuthSocketMgr.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  VMapDefinitions.h  VMapTools.h
src/server/collision/Management/: IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/server/collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  (+1 more)
src/server/database/: CMakeLists.txt
src/server/game/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt  ScriptLoader.cpp.in.cmake  ScriptLoader.h  ScriptPCH.cpp  ScriptPCH.h
src/server/shared/: AutoPtr.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Containers.h  Define.h  Memory.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist  worldserver.rc
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.cpp  adt.h  dbcfile.cpp  dbcfile.h  loadlib.cpp  mpq_libmpq.cpp  mpq_libmpq04.h  wdt.cpp  wdt.h
src/tools/mesh_extractor/: ADT.cpp  ADT.h  CMakeLists.txt  Cache.h  Chunk.cpp  Chunk.h  ChunkedData.cpp  ChunkedData.h  Constants.h  ContinentBuilder.cpp  ContinentBuilder.h  DBC.cpp  DBC.h  DoodadHandler.cpp  DoodadHandler.h  Geometry.cpp  Geometry.h  LiquidHandler.cpp  LiquidHandler.h  MPQ.cpp  MPQ.h  MPQManager.cpp  MPQManager.h  MapChunk.cpp  MapChunk.h  MeshExtractor.cpp  Model.cpp  Model.h  ObjectDataHandler.cpp  ObjectDataHandler.h  TileBuilder.cpp  TileBuilder.h  Utils.cpp  Utils.h  WDT.cpp  WDT.h  WorldModelGroup.cpp  WorldModelGroup.h  WorldModelHandler.cpp  WorldModelHandler.h  (+2 more)
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
src/tools/vmap4_assembler/: CMakeLists.txt  VMapAssembler.cpp
src/tools/vmap4_extractor/: CMakeLists.txt  adtfile.cpp  adtfile.h  dbcfile.cpp  dbcfile.h  gameobject_extract.cpp  model.cpp  model.h  modelheaders.h  mpq_libmpq.cpp  mpq_libmpq04.h  mpqfile.cpp  mpqfile.h  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
(+2036 files in other folders)
